--- a/src/styles/components/filters.scss
+++ b/src/styles/components/filters.scss
@@ -17,6 +17,11 @@
   border: 1px solid greenyellow;
   background-color: rgb(0, 135, 126);
 }
+.name {
+  color: rgb(0, 153, 138);
+  font-weight: 700;
+  margin: 2px;
+}
 .formSpecie {
   display: flex;
   flex-direction: row;
