--- a/src/styles/components/carddetail.scss
+++ b/src/styles/components/carddetail.scss
@@ -5,6 +5,7 @@
   border: 2px solid rgb(0, 206, 185);
   padding: 2px;
   box-shadow: 0px 2px 22px #555;
+  background-color: #00bfff;
 }
 .logoCardDetail {
   height: 20vh;
@@ -16,19 +17,19 @@
   height: 100px;
 }
 .card__name {
-  color: rgb(47, 255, 234);
+  color: white;
   font-size: 1rem;
   padding: 0.5rem;
   text-align: center;
 }
 .card__description {
-  color: rgb(47, 255, 234);
+  color: white;
   font-size: 0.8rem;
   padding: 0.2rem;
   text-align: center;
 }
 .linkbtn {
-  color: rgb(47, 255, 252);
+  color: grey;
   border: 1px solid rgb(47, 255, 234);
   box-shadow: 0px 2px 22px #555;
   border-radius: 0.5rem;
