--- a/src/styles/components/cards.scss
+++ b/src/styles/components/cards.scss
@@ -29,3 +29,11 @@
 .link {
   text-decoration: none;
 }
+@media all and (min-width: 768px) {
+  .card_container {
+    margin: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
+  }
+}
