--- a/src/styles/components/cards.scss
+++ b/src/styles/components/cards.scss
@@ -5,10 +5,17 @@
   box-shadow: 0px 2px 12px #555;
 }
 .card_container {
-  margin: 20px;
+  margin-top: 15px;
+  margin-left: 2px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 10px;
+  grid-gap: 5px;
+}
+@media (max-width: 400px) {
+  .card_container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1px;
+  }
 }
 .card__img {
   width: 150px;
@@ -28,12 +35,4 @@
 }
 .link {
   text-decoration: none;
-}
-@media all and (min-width: 768px) {
-  .card_container {
-    margin: 20px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
-  }
 }
