--- a/src/styles/components/cards.scss
+++ b/src/styles/components/cards.scss
@@ -1,26 +1,36 @@
 .card {
-  width: 155px;
+  width: 255px;
   border: 2px solid rgb(0, 206, 185);
   padding: 1px;
   box-shadow: 0px 2px 12px #555;
 }
 .card_container {
   margin-top: 15px;
-  margin-left: 2px;
+  margin-left: 10px;
+  margin-bottom: 10px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-gap: 5px;
+  grid-gap: 10px;
+}
+.card__img {
+  width: 250px;
+  height: 200px;
 }
 @media (max-width: 400px) {
+  .card {
+    width: 150px;
+  }
   .card_container {
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 1px;
+    margin-left: 25px;
+  }
+  .card__img {
+    width: 145px;
+    height: 100px;
   }
 }
-.card__img {
-  width: 150px;
-  height: 120px;
-}
+
 .card__name {
   color: rgb(47, 255, 234);
   font-size: 1rem;
